Overview of changes in gnome-calculator 48.alpha
    * Updated translations
    * a11y: Announce the calculation result even when done through the buttons #411 (Lukáš Tyrychtr)
    * display: Cycle through history with Alt+Left/Right buttons #296 (Hari Rana)
    * character-dialog: Modernized the character dialog (Hari Rana)
    * history-entry: Apply dim label to some buttons (Hari Rana)
    * math-preferences: Use header capitalization (Automeris naranja)
    * converter: Use correct kJ unit shortName #427 (Robert Roth)
    * converter: Fixed incorrect units in financial mode #424 (Robert Roth)
    * converter: Added nanosecond unit (Robert Roth)
    * tests: Fixed broken test on slower computers #434 (Robert Roth)
    * history-view: Improve default size #419 (Robert Roth)
    * display: Fixed incorrectly sized text entry #405 (Robert Roth)
    * converter: Add pressure units !179 (Olexander Movchan, Anders Jonsson)
    * converter: Updated russian ruble currency symbol and name #440 (Robert Roth)
    * display: Fix crash on using Shift+Insert #442 (Robert Roth)
    * converter: Fixed MJ and kWh conversion factors #445 (Çağatay Yiğit Şahin)
    * tests: Added test to validate MJ and kWh conversion (Robert Roth)
    * keyboard: Added shortcut to clear history #398 (Claudio Silva Junior)

Overview of changes in gnome-calculator 47.0
    * Updated translations
    * Fixed flatpak build !181 (Hari Rana)
    * Don't use symbolic icons for the window !182 (Balló György)

Overview of changes in gnome-calculator 47.rc
    * Updated translations
    * Added brand colors !178 (Brage Fuglseth)

Overview of changes in gnome-calculator 47.beta
    * Updated translations
    * Fix hex string conversion for bitwise operator !177 (Xiong Nandi)
    * Force LTR for buttons !171 (Khalid Abu Shawarib)
    * Added kWh, MJ, KJ unit support #417 (Robert Roth)
    * Sort conversion categories alphabetically #395 (Robert Roth)