@@ -87,6 +87,16 @@
   <launchable type="desktop-id">@app_id@.desktop</launchable>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="48~beta" date="2025-02-01" type="development">
+      <description>
+        <ul>
+          <li>Updated translations</li>
+          <li>Added new Conversion mode (fcusr)</li>
+          <li>Ported financial dialogs to modern widgets (fcusr)</li>
+          <li>Minor improvements to styling and usability (fcusr)</li>
+        </ul>
+      </description>
+    </release>
     <release version="48~alpha" date="2025-01-11" type="development">
       <description>
         <ul>
