@@ -1,3 +1,10 @@
+Overview of changes in gnome-calculator 48.beta
+    * Updated translations
+    * Added Conversion mode (fcusr)
+    * Ported financial dialogs to modern widgets (fcusr)
+    * programming: disable digits not available in current number base
+    * buttons: improvements to popover styling
+
 Overview of changes in gnome-calculator 48.alpha
     * Updated translations
     * a11y: Announce the calculation result even when done through the buttons #411 (Lukáš Tyrychtr)
